[package]
name = "grav_search"
version = "0.1.0"
authors = ["dskleingeld <11743287+dskleingeld@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gsa"
path = "src/gsa.rs"

[[bin]]
name = "gabsa"
path = "src/gabsa.rs"

[dependencies]
rand = "0.8"
rand_xoshiro = "0.6"
num-traits = "0.2.14"
derivative = "2.1"
noisy_float = { git = "https://github.com/dskleingeld/noisy_float-rs.git", branch= "mirror_serde" }
itertools = "0.10"
